--- a/static/style.css
+++ b/static/style.css
@@ -2,17 +2,28 @@
   flex-direction: column;
 }
 #box1 {
-  background-color: blue;
+  background-color: gray;
   text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 #box2 {
-  background-color: gray;
+  background-color: red;
   text-align: center;
   height: 500px;
   width: 500px;
   margin: auto;
+  margin-bottom: 50px;
 }
 #box3 {
   background-color: gainsboro;
   height: 300px;
+  text-align: center;
+}
+#screen {
+  width: 500px;
+  height: 500px
+}
+body {
+  background-color: lightgray;
 }
