--- a/static/style.css
+++ b/static/style.css
@@ -1,29 +1,62 @@
 #Container {
   flex-direction: column;
+  width: 1200px;
+  height: 800px;
+  /* background-color: gainsboro; */
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+h1 {
+  font-style: italic;
+  color: gray;
+  font-weight: 800;
+}
+/* img {
+  width: 600px;
+  height: 400px;
+} */
+
+#box0 {
+  /* background-color: c; */
+
+  /* background-color: yellow; */
+  width: 1000px;
+  height: 900px;
+  border: 2px solid gray;
+  background-color: gainsboro;
+  border-radius: 15px;
+  /* margin: 100; */
 }
 #box1 {
-  background-color: gray;
+  /* background-color: gray; */
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-right: 100px;
+  padding-left: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  /* margin-top: 20px; */
 }
 #box2 {
-  background-color: red;
+  background-color: black;
   text-align: center;
   height: 500px;
   width: 500px;
   margin: auto;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 #box3 {
-  background-color: gainsboro;
-  height: 300px;
+  background-color: gray;
+  height: 5px;
   text-align: center;
 }
 #screen {
   width: 500px;
-  height: 500px
+  height: 500px;
+  /* display: none; */
 }
 body {
-  background-color: lightgray;
+  background-color: white;
 }
